<resources>
    <string name="app_name">App_Layouts</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="pending_order">Pending Order</string>
    <string name="order_history">Order History</string>
    <string name="settings">Settings</string>
    <string name="verify_your_number_with_codes_sent_to_you">Verify your number with codes sent to you</string>
    <string name="i_didn_t_receive_the_code">I didn\'t receive the code,</string>
    <string name="resend">Resend</string>
    <string name="continue_text">Continue</string>
    <string name="log_in">Log In</string>
    <string-array name="shoptype_array">
        <item>Conventional</item>
        <item>Bakery</item>
        <item>Stationary</item>
    </string-array>
</resources>