<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">
    <include layout="@layout/toolbar_menu"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_main_app_icon"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:padding="10dp"
            android:layout_marginBottom="20dp">
            <ImageView
                android:id="@+id/imgIconEditProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_icon_edit_profile"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_toEndOf="@id/imgIconEditProfile"
                android:fontFamily="@font/sfpro_disp"
                android:text="@string/edit_profile"
                android:textSize="22sp" />
            <ImageButton
                android:id="@+id/edit_profile_menu_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFF"
                android:layout_gravity="end"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_baseline_arrow_forward_ios_24"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:padding="10dp"
            android:layout_marginBottom="20dp">
            <ImageView
                android:id="@+id/imgIconPOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_icon_pending"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"/>

            <TextView
                android:layout_toEndOf="@id/imgIconPOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sfpro_disp"
                android:text="@string/pending_order"
                android:textSize="22sp"
                android:layout_marginStart="6dp" />
            <ImageButton
                android:id="@+id/pending_order_menu_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFF"
                android:layout_gravity="end"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_baseline_arrow_forward_ios_24"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:padding="10dp"
            android:layout_marginBottom="20dp">
            <ImageView
                android:id="@+id/imgIconOHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_icon_history"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"/>

            <TextView
                android:layout_toEndOf="@id/imgIconOHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sfpro_disp"
                android:text="@string/order_history"
                android:textSize="22sp"
                android:layout_marginStart="6dp" />
            <ImageButton
                android:id="@+id/order_history_menu_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFF"
                android:layout_gravity="end"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_baseline_arrow_forward_ios_24"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:padding="10dp"
            android:layout_marginBottom="20dp">
            <ImageView
                android:id="@+id/imgIconSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_settings"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"/>

            <TextView
                android:layout_toEndOf="@id/imgIconSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sfpro_disp"
                android:text="@string/settings"
                android:textSize="22sp"
                android:layout_marginStart="6dp" />
            <ImageButton
                android:id="@+id/settings_menu_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFF"
                android:layout_gravity="end"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_baseline_arrow_forward_ios_24"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>