<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#FFF">
    <include layout="@layout/toolbar_menu"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_main_app_icon"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FF205072"
            android:text="@string/verify_your_number_with_codes_sent_to_you"
            android:textSize="18sp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:textAlignment="center"
            android:fontFamily="@font/montserrat_semibold"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextDigit1"
            android:layout_width="25dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:ems="10"
            android:textAlignment="center"
            android:inputType="number"
            android:maxLength="1"
            android:maxLines="1"
            android:background="@drawable/otp_code_textbox"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:textSize="21sp"
            android:fontFamily="@font/montserrat_semibold"
            android:nextFocusRight="@id/editTextDigit2"
            android:imeOptions="actionNext"
            android:textCursorDrawable="@drawable/edit_text_small_cursor"/>

        <EditText
            android:id="@+id/editTextDigit2"
            android:layout_width="25dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:ems="10"
            android:textAlignment="center"
            android:inputType="number"
            android:maxLength="1"
            android:maxLines="1"
            android:background="@drawable/otp_code_textbox"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="21sp"
            android:nextFocusRight="@id/editTextDigit3"
            android:imeOptions="actionNext"
            android:textCursorDrawable="@drawable/edit_text_small_cursor"/>

        <EditText
            android:id="@+id/editTextDigit3"
            android:layout_width="25dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:ems="10"
            android:textAlignment="center"
            android:inputType="number"
            android:maxLength="1"
            android:maxLines="1"
            android:background="@drawable/otp_code_textbox"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="21sp"
            android:nextFocusRight="@id/editTextDigit4"
            android:imeOptions="actionNext"
            android:textCursorDrawable="@drawable/edit_text_small_cursor"/>

        <EditText
            android:id="@+id/editTextDigit4"
            android:layout_width="25dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:ems="10"
            android:textAlignment="center"
            android:inputType="number"
            android:maxLength="1"
            android:maxLines="1"
            android:background="@drawable/otp_code_textbox"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="21sp"
            android:nextFocusRight="@id/editTextDigit5"
            android:imeOptions="actionNext"
            android:textCursorDrawable="@drawable/edit_text_small_cursor"/>

        <EditText
            android:id="@+id/editTextDigit5"
            android:layout_width="25dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:ems="10"
            android:textAlignment="center"
            android:inputType="number"
            android:maxLength="1"
            android:maxLines="1"
            android:background="@drawable/otp_code_textbox"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="21sp"
            android:nextFocusRight="@id/editTextDigit6"
            android:imeOptions="actionNext"
            android:textCursorDrawable="@drawable/edit_text_small_cursor"/>

        <EditText
            android:id="@+id/editTextDigit6"
            android:layout_width="25dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:ems="10"
            android:textAlignment="center"
            android:inputType="number"
            android:maxLength="1"
            android:maxLines="1"
            android:background="@drawable/otp_code_textbox"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="21sp"
            android:textCursorDrawable="@drawable/edit_text_small_cursor"/>

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textColor="#5DBFA6"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/i_didn_t_receive_the_code"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="15sp"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="#232323"
            android:text="@string/resend"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom"
        android:layout_marginBottom="50dp">
        <Button
            android:id="@+id/btn_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="35dp"
            android:layout_marginTop="10dp"
            android:paddingEnd="35dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/verification_page_button"
            android:fontFamily="@font/montserrat_bold"
            android:padding="20dp"
            android:text="@string/continue_text"
            android:textColor="#fff"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>